--- a/package.json
+++ b/package.json
@@ -2,16 +2,26 @@
   "name": "eth_log_cache",
   "version": "0.0.1",
   "description": "eth log cache",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node  app.js",
+    "test": "node_modules/mocha/bin/mocha --timeout 20000"
   },
   "dependencies": {
-    "@google-cloud/datastore": "2.0.0",
-    "uglify-js": "3.4.9"
+    "@google-cloud/datastore": "^2.0.0",
+    "ethereum-event-logs": "^1.3.0",
+    "express": "^4.16.4",
+    "nconf": "^0.10.0",
+    "uglify-js": "^3.4.9",
+    "web3": "^0.20.6"
   },
   "devDependencies": {
-    "@google-cloud/nodejs-repo-tools": "^3.0.0"
+    "@google-cloud/nodejs-repo-tools": "^3.0.0",
+    "google-datastore-emulator": "^2.1.0",
+    "mocha": "^5.2.0",
+    "assert": "^1.4.1",
+    "sinon": "^7.1.1",
+    "request": "^2.88.0"
   },
   "repository": {
     "type": "git",
