--- a/package.json
+++ b/package.json
@@ -5,22 +5,21 @@
   "main": "app.js",
   "scripts": {
     "start": "node  app.js",
-    "test": "node_modules/mocha/bin/mocha --timeout 20000"
+    "test": "jest",
+    "coverage": "jest --coverage"
   },
   "dependencies": {
     "@google-cloud/datastore": "^2.0.0",
     "ethereum-event-logs": "^1.3.0",
     "express": "^4.16.4",
     "nconf": "^0.10.0",
-    "uglify-js": "^3.4.9",
     "web3": "^0.20.6"
   },
   "devDependencies": {
     "@google-cloud/nodejs-repo-tools": "^3.0.0",
-    "google-datastore-emulator": "^2.1.0",
-    "mocha": "^5.2.0",
     "assert": "^1.4.1",
-    "sinon": "^7.1.1",
+    "google-datastore-emulator": "^2.1.0",
+    "jest": "^23.6.0",
     "request": "^2.88.0"
   },
   "repository": {
