--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ethereum-event-logs": "^1.3.0",
     "express": "^4.16.4",
     "nconf": "^0.10.0",
+    "sha3": "^2.0.0",
     "web3": "^0.20.6"
   },
   "devDependencies": {
