--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@google-cloud/datastore": "^2.0.0",
+    "dotenv": "^6.1.0",
     "ethereum-event-logs": "^1.3.0",
     "express": "^4.16.4",
     "nconf": "^0.10.0",
